--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <header class="main-header">
-    <div class="logo">S.O.G</div>
+    <div class="logo">Bhai ki Dukaan</div>
     <nav>
       <a href="#">Home</a>
       <a href="#products">Products</a>
